--- a/guide.css
+++ b/guide.css
@@ -8,7 +8,7 @@ h1{
 }
 div.demonstratifs{
     width: 50%;
-    height: 600px;
+    height: 700px;
     background-color: rgb(230, 221, 174);
 }
 table{
@@ -129,4 +129,31 @@ input.lu{
 input.vu{
     width: 70%;
     background-color: rgb(218, 145, 173);
+}
+div.connaitre{
+    width: 50%;
+    height: 2600px;
+    background-color: rgb(120, 231, 153);
+}
+b.verbe{
+    color: rgb(216, 112, 147);
+}
+b.verbo{
+    color: blue;
+}
+dt{
+    font-size: 15pt;
+}
+dl{
+    font-size: 13pt;
+}
+textarea.ar{
+    width: 90%;
+    height: 900px;
+    background-color: beige;
+}
+div.photo{
+    width: 50%;
+    height: 4000px;
+    background-color: rgb(230, 221, 174);
 }
